--- a/package.json
+++ b/package.json
@@ -544,6 +544,7 @@
     "xtend": "^4.0.2"
   },
   "devDependencies": {
+    "netlify-cli": "^10.12.1",
     "parcel-bundler": "^1.12.4"
   },
   "scripts": {
